filter_lab/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression
Rule 2     statement -> factor
Rule 3     statement -> list
Rule 4     expression -> expression PLUS factor
Rule 5     expression -> factor PLUS factor
Rule 6     expression -> expression MINUS factor
Rule 7     expression -> factor MINUS factor
Rule 8     factor -> factor TIMES factor
Rule 9     factor -> factor DIVIDE factor
Rule 10    factor -> factor EXP factor
Rule 11    factor -> factor factor
Rule 12    factor -> MINUS factor
Rule 13    factor -> factor FACTORIAL
Rule 14    factor -> CHOOSE LPAREN list RPAREN
Rule 15    factor -> PERMUTE LPAREN list RPAREN
Rule 16    factor -> Q LPAREN factor RPAREN
Rule 17    factor -> Q LPAREN expression RPAREN
Rule 18    factor -> LPAREN expression RPAREN
Rule 19    factor -> LBRACKET expression RBRACKET
Rule 20    factor -> LPAREN factor RPAREN
Rule 21    factor -> LBRACKET factor RBRACKET
Rule 22    factor -> LPAREN expression
Rule 23    factor -> LBRACKET expression
Rule 24    factor -> LPAREN factor
Rule 25    factor -> LBRACKET factor
Rule 26    factor -> CHOOSE LPAREN list
Rule 27    factor -> PERMUTE LPAREN list
Rule 28    factor -> LSET list RSET
Rule 29    factor -> LSET expression RSET
Rule 30    factor -> LSET RSET
Rule 31    factor -> LPAREN list RPAREN
Rule 32    list -> expression COMMA
Rule 33    list -> list expression COMMA
Rule 34    list -> list expression
Rule 35    list -> factor COMMA
Rule 36    list -> list factor COMMA
Rule 37    list -> list factor
Rule 38    factor -> NUMBER
Rule 39    factor -> VARIABLE

Terminals, with rules where they appear

CHOOSE               : 14 26
COMMA                : 32 33 35 36
DIVIDE               : 9
EXP                  : 10
FACTORIAL            : 13
LBRACKET             : 19 21 23 25
LPAREN               : 14 15 16 17 18 20 22 24 26 27 31
LSET                 : 28 29 30
MINUS                : 6 7 12
NUMBER               : 38
PERMUTE              : 15 27
PLUS                 : 4 5
Q                    : 16 17
RBRACKET             : 19 21
RPAREN               : 14 15 16 17 18 20 31
RSET                 : 28 29 30
TIMES                : 8
VARIABLE             : 39
error                : 

Nonterminals, with rules where they appear

expression           : 1 4 6 17 18 19 22 23 29 32 33 34
factor               : 2 4 5 5 6 7 7 8 8 9 9 10 10 11 11 12 13 16 20 21 24 25 35 36 37
list                 : 3 14 15 26 27 28 31 33 34 36 37
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression
    (2) statement -> . factor
    (3) statement -> . list
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . LPAREN expression RPAREN
    (19) factor -> . LBRACKET expression RBRACKET
    (20) factor -> . LPAREN factor RPAREN
    (21) factor -> . LBRACKET factor RBRACKET
    (22) factor -> . LPAREN expression
    (23) factor -> . LBRACKET expression
    (24) factor -> . LPAREN factor
    (25) factor -> . LBRACKET factor
    (26) factor -> . CHOOSE LPAREN list
    (27) factor -> . PERMUTE LPAREN list
    (28) factor -> . LSET list RSET
    (29) factor -> . LSET expression RSET
    (30) factor -> . LSET RSET
    (31) factor -> . LPAREN list RPAREN
    (38) factor -> . NUMBER
    (39) factor -> . VARIABLE
    (32) list -> . expression COMMA
    (33) list -> . list expression COMMA
    (34) list -> . list expression
    (35) list -> . factor COMMA
    (36) list -> . list factor COMMA
    (37) list -> . list factor

    MINUS           shift and go to state 3
    CHOOSE          shift and go to state 12
    PERMUTE         shift and go to state 7
    Q               shift and go to state 8
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 2
    LSET            shift and go to state 4
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 10

    list                           shift and go to state 11
    expression                     shift and go to state 13
    statement                      shift and go to state 5
    factor                         shift and go to state 6

state 1

    (38) factor -> NUMBER .

    RBRACKET        reduce using rule 38 (factor -> NUMBER .)
    PLUS            reduce using rule 38 (factor -> NUMBER .)
    MINUS           reduce using rule 38 (factor -> NUMBER .)
    TIMES           reduce using rule 38 (factor -> NUMBER .)
    DIVIDE          reduce using rule 38 (factor -> NUMBER .)
    EXP             reduce using rule 38 (factor -> NUMBER .)
    FACTORIAL       reduce using rule 38 (factor -> NUMBER .)
    COMMA           reduce using rule 38 (factor -> NUMBER .)
    CHOOSE          reduce using rule 38 (factor -> NUMBER .)
    PERMUTE         reduce using rule 38 (factor -> NUMBER .)
    Q               reduce using rule 38 (factor -> NUMBER .)
    LPAREN          reduce using rule 38 (factor -> NUMBER .)
    LBRACKET        reduce using rule 38 (factor -> NUMBER .)
    LSET            reduce using rule 38 (factor -> NUMBER .)
    NUMBER          reduce using rule 38 (factor -> NUMBER .)
    VARIABLE        reduce using rule 38 (factor -> NUMBER .)
    $end            reduce using rule 38 (factor -> NUMBER .)
    RPAREN          reduce using rule 38 (factor -> NUMBER .)
    RSET            reduce using rule 38 (factor -> NUMBER .)


state 2

    (19) factor -> LBRACKET . expression RBRACKET
    (21) factor -> LBRACKET . factor RBRACKET
    (23) factor -> LBRACKET . expression
    (25) factor -> LBRACKET . factor
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . LPAREN expression RPAREN
    (19) factor -> . LBRACKET expression RBRACKET
    (20) factor -> . LPAREN factor RPAREN
    (21) factor -> . LBRACKET factor RBRACKET
    (22) factor -> . LPAREN expression
    (23) factor -> . LBRACKET expression
    (24) factor -> . LPAREN factor
    (25) factor -> . LBRACKET factor
    (26) factor -> . CHOOSE LPAREN list
    (27) factor -> . PERMUTE LPAREN list
    (28) factor -> . LSET list RSET
    (29) factor -> . LSET expression RSET
    (30) factor -> . LSET RSET
    (31) factor -> . LPAREN list RPAREN
    (38) factor -> . NUMBER
    (39) factor -> . VARIABLE

    MINUS           shift and go to state 3
    CHOOSE          shift and go to state 12
    PERMUTE         shift and go to state 7
    Q               shift and go to state 8
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 2
    LSET            shift and go to state 4
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 10

    expression                     shift and go to state 15
    factor                         shift and go to state 14

state 3

    (12) factor -> MINUS . factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . LPAREN expression RPAREN
    (19) factor -> . LBRACKET expression RBRACKET
    (20) factor -> . LPAREN factor RPAREN
    (21) factor -> . LBRACKET factor RBRACKET
    (22) factor -> . LPAREN expression
    (23) factor -> . LBRACKET expression
    (24) factor -> . LPAREN factor
    (25) factor -> . LBRACKET factor
    (26) factor -> . CHOOSE LPAREN list
    (27) factor -> . PERMUTE LPAREN list
    (28) factor -> . LSET list RSET
    (29) factor -> . LSET expression RSET
    (30) factor -> . LSET RSET
    (31) factor -> . LPAREN list RPAREN
    (38) factor -> . NUMBER
    (39) factor -> . VARIABLE

    MINUS           shift and go to state 3
    CHOOSE          shift and go to state 12
    PERMUTE         shift and go to state 7
    Q               shift and go to state 8
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 2
    LSET            shift and go to state 4
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 10

    factor                         shift and go to state 16

state 4

    (28) factor -> LSET . list RSET
    (29) factor -> LSET . expression RSET
    (30) factor -> LSET . RSET
    (32) list -> . expression COMMA
    (33) list -> . list expression COMMA
    (34) list -> . list expression
    (35) list -> . factor COMMA
    (36) list -> . list factor COMMA
    (37) list -> . list factor
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . LPAREN expression RPAREN
    (19) factor -> . LBRACKET expression RBRACKET
    (20) factor -> . LPAREN factor RPAREN
    (21) factor -> . LBRACKET factor RBRACKET
    (22) factor -> . LPAREN expression
    (23) factor -> . LBRACKET expression
    (24) factor -> . LPAREN factor
    (25) factor -> . LBRACKET factor
    (26) factor -> . CHOOSE LPAREN list
    (27) factor -> . PERMUTE LPAREN list
    (28) factor -> . LSET list RSET
    (29) factor -> . LSET expression RSET
    (30) factor -> . LSET RSET
    (31) factor -> . LPAREN list RPAREN
    (38) factor -> . NUMBER
    (39) factor -> . VARIABLE

    RSET            shift and go to state 18
    MINUS           shift and go to state 3
    CHOOSE          shift and go to state 12
    PERMUTE         shift and go to state 7
    Q               shift and go to state 8
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 2
    LSET            shift and go to state 4
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 10

    expression                     shift and go to state 20
    list                           shift and go to state 17
    factor                         shift and go to state 19

state 5

    (0) S' -> statement .



state 6

    (2) statement -> factor .
    (5) expression -> factor . PLUS factor
    (7) expression -> factor . MINUS factor
    (8) factor -> factor . TIMES factor
    (9) factor -> factor . DIVIDE factor
    (10) factor -> factor . EXP factor
    (11) factor -> factor . factor
    (13) factor -> factor . FACTORIAL
    (35) list -> factor . COMMA
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . LPAREN expression RPAREN
    (19) factor -> . LBRACKET expression RBRACKET
    (20) factor -> . LPAREN factor RPAREN
    (21) factor -> . LBRACKET factor RBRACKET
    (22) factor -> . LPAREN expression
    (23) factor -> . LBRACKET expression
    (24) factor -> . LPAREN factor
    (25) factor -> . LBRACKET factor
    (26) factor -> . CHOOSE LPAREN list
    (27) factor -> . PERMUTE LPAREN list
    (28) factor -> . LSET list RSET
    (29) factor -> . LSET expression RSET
    (30) factor -> . LSET RSET
    (31) factor -> . LPAREN list RPAREN
    (38) factor -> . NUMBER
    (39) factor -> . VARIABLE

    $end            reduce using rule 2 (statement -> factor .)
    PLUS            shift and go to state 24
    MINUS           shift and go to state 28
    TIMES           shift and go to state 23
    DIVIDE          shift and go to state 21
    EXP             shift and go to state 25
    FACTORIAL       shift and go to state 22
    COMMA           shift and go to state 27
    CHOOSE          shift and go to state 12
    PERMUTE         shift and go to state 7
    Q               shift and go to state 8
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 2
    LSET            shift and go to state 4
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 10

    factor                         shift and go to state 26

state 7

    (15) factor -> PERMUTE . LPAREN list RPAREN
    (27) factor -> PERMUTE . LPAREN list

    LPAREN          shift and go to state 29


state 8

    (16) factor -> Q . LPAREN factor RPAREN
    (17) factor -> Q . LPAREN expression RPAREN

    LPAREN          shift and go to state 30


state 9

    (18) factor -> LPAREN . expression RPAREN
    (20) factor -> LPAREN . factor RPAREN
    (22) factor -> LPAREN . expression
    (24) factor -> LPAREN . factor
    (31) factor -> LPAREN . list RPAREN
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . LPAREN expression RPAREN
    (19) factor -> . LBRACKET expression RBRACKET
    (20) factor -> . LPAREN factor RPAREN
    (21) factor -> . LBRACKET factor RBRACKET
    (22) factor -> . LPAREN expression
    (23) factor -> . LBRACKET expression
    (24) factor -> . LPAREN factor
    (25) factor -> . LBRACKET factor
    (26) factor -> . CHOOSE LPAREN list
    (27) factor -> . PERMUTE LPAREN list
    (28) factor -> . LSET list RSET
    (29) factor -> . LSET expression RSET
    (30) factor -> . LSET RSET
    (31) factor -> . LPAREN list RPAREN
    (38) factor -> . NUMBER
    (39) factor -> . VARIABLE
    (32) list -> . expression COMMA
    (33) list -> . list expression COMMA
    (34) list -> . list expression
    (35) list -> . factor COMMA
    (36) list -> . list factor COMMA
    (37) list -> . list factor

    MINUS           shift and go to state 3
    CHOOSE          shift and go to state 12
    PERMUTE         shift and go to state 7
    Q               shift and go to state 8
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 2
    LSET            shift and go to state 4
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 10

    list                           shift and go to state 31
    expression                     shift and go to state 33
    factor                         shift and go to state 32

state 10

    (39) factor -> VARIABLE .

    RBRACKET        reduce using rule 39 (factor -> VARIABLE .)
    PLUS            reduce using rule 39 (factor -> VARIABLE .)
    MINUS           reduce using rule 39 (factor -> VARIABLE .)
    TIMES           reduce using rule 39 (factor -> VARIABLE .)
    DIVIDE          reduce using rule 39 (factor -> VARIABLE .)
    EXP             reduce using rule 39 (factor -> VARIABLE .)
    FACTORIAL       reduce using rule 39 (factor -> VARIABLE .)
    COMMA           reduce using rule 39 (factor -> VARIABLE .)
    CHOOSE          reduce using rule 39 (factor -> VARIABLE .)
    PERMUTE         reduce using rule 39 (factor -> VARIABLE .)
    Q               reduce using rule 39 (factor -> VARIABLE .)
    LPAREN          reduce using rule 39 (factor -> VARIABLE .)
    LBRACKET        reduce using rule 39 (factor -> VARIABLE .)
    LSET            reduce using rule 39 (factor -> VARIABLE .)
    NUMBER          reduce using rule 39 (factor -> VARIABLE .)
    VARIABLE        reduce using rule 39 (factor -> VARIABLE .)
    $end            reduce using rule 39 (factor -> VARIABLE .)
    RPAREN          reduce using rule 39 (factor -> VARIABLE .)
    RSET            reduce using rule 39 (factor -> VARIABLE .)


state 11

    (3) statement -> list .
    (33) list -> list . expression COMMA
    (34) list -> list . expression
    (36) list -> list . factor COMMA
    (37) list -> list . factor
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . LPAREN expression RPAREN
    (19) factor -> . LBRACKET expression RBRACKET
    (20) factor -> . LPAREN factor RPAREN
    (21) factor -> . LBRACKET factor RBRACKET
    (22) factor -> . LPAREN expression
    (23) factor -> . LBRACKET expression
    (24) factor -> . LPAREN factor
    (25) factor -> . LBRACKET factor
    (26) factor -> . CHOOSE LPAREN list
    (27) factor -> . PERMUTE LPAREN list
    (28) factor -> . LSET list RSET
    (29) factor -> . LSET expression RSET
    (30) factor -> . LSET RSET
    (31) factor -> . LPAREN list RPAREN
    (38) factor -> . NUMBER
    (39) factor -> . VARIABLE

    $end            reduce using rule 3 (statement -> list .)
    MINUS           shift and go to state 3
    CHOOSE          shift and go to state 12
    PERMUTE         shift and go to state 7
    Q               shift and go to state 8
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 2
    LSET            shift and go to state 4
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 10

    expression                     shift and go to state 35
    factor                         shift and go to state 34

state 12

    (14) factor -> CHOOSE . LPAREN list RPAREN
    (26) factor -> CHOOSE . LPAREN list

    LPAREN          shift and go to state 36


state 13

    (1) statement -> expression .
    (4) expression -> expression . PLUS factor
    (6) expression -> expression . MINUS factor
    (32) list -> expression . COMMA

    $end            reduce using rule 1 (statement -> expression .)
    PLUS            shift and go to state 37
    MINUS           shift and go to state 39
    COMMA           shift and go to state 38


state 14

    (21) factor -> LBRACKET factor . RBRACKET
    (25) factor -> LBRACKET factor .
    (5) expression -> factor . PLUS factor
    (7) expression -> factor . MINUS factor
    (8) factor -> factor . TIMES factor
    (9) factor -> factor . DIVIDE factor
    (10) factor -> factor . EXP factor
    (11) factor -> factor . factor
    (13) factor -> factor . FACTORIAL
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . LPAREN expression RPAREN
    (19) factor -> . LBRACKET expression RBRACKET
    (20) factor -> . LPAREN factor RPAREN
    (21) factor -> . LBRACKET factor RBRACKET
    (22) factor -> . LPAREN expression
    (23) factor -> . LBRACKET expression
    (24) factor -> . LPAREN factor
    (25) factor -> . LBRACKET factor
    (26) factor -> . CHOOSE LPAREN list
    (27) factor -> . PERMUTE LPAREN list
    (28) factor -> . LSET list RSET
    (29) factor -> . LSET expression RSET
    (30) factor -> . LSET RSET
    (31) factor -> . LPAREN list RPAREN
    (38) factor -> . NUMBER
    (39) factor -> . VARIABLE
